# survival-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml  tradebotcontext.md
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: BalanceChart.tsx  Controls.tsx  CycleHistory.tsx  PositionsList.tsx  StatusCard.tsx  TradeHistory.tsx
dashboard/lib/: api.ts  websocket.ts
migrations/: 001_init.sql
src/: config.rs  main.rs
src/api/: mod.rs  routes.rs  websocket.rs
src/binance/: client.rs  mod.rs  types.rs
src/db/: models.rs  queries.rs
src/market/: fear_greed.rs  mod.rs
src/openclaw/: discord.rs  mod.rs  parser.rs  prompt.rs
src/scheduler/: mod.rs
src/trading/: engine.rs  mod.rs  risk.rs  strategy.rs
